test/fails/bad_generics/tags10.lgl
tag a is vec2;
tag b is vec2;
tag c is b;
tag d is b;
tag e is c;

`t downcast2dumb<`t : vec2, `u : `t>(`t x) {
  `t->`u caster = [[1., 0.], [0., 1.]];
  return caster * x;
}

void main() {
    b bvec = [1., 0.];
    e fail = downcast2dumb<b, c>(bvec);
}